--- a/Product-Card/style.css
+++ b/Product-Card/style.css
@@ -29,6 +29,8 @@ body {
   align-items: center;
   justify-items: center;
   padding: 1rem;
+
+  overflow: hidden;
 }
 /* MAIN */
 main {
@@ -89,6 +91,7 @@ p.description {
 
 button {
   width: 100%;
+
   margin: 0.5rem 0;
   padding: 0.6rem;
   border: none;
